add first and last names

--- a/PA6.qmd
+++ b/PA6.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Practice Activity 6"
+author: Drew Loader, Zoey Miles, Caroline Ritchy
 format: html
 editor: visual
 embedded-resources: true
